[package]
name = "buf-mutex"
version = "0.2.1"
edition = "2021"
description = "Buffered mutexes"
repository = "https://github.com/vigna/buf-mutex-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
keywords = ["mutex", "buffer", "concurrency"]
categories = ["concurrency"]
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]

[dev-dependencies]
rayon = "1.10.0"
