[package]
name = "openmp-reducer"
version = "0.2.3"
edition = "2021"
description = "OpenMP-style reducers"
repository = "https://github.com/vigna/openmp-reducer-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
keywords = ["reducer", "concurrency"]
categories = ["concurrency"]
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]

[dev-dependencies]
rayon = "1.10.0"
